maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:15: error: type mismatch;
 found   : Unit
 required: (Int, Int)
  for(x <- 0 until X)
        ^ShortestPathMaze:22: error: (Int, Int) does not take parameters
  val x = casee(0);
               ^ShortestPathMaze:23: error: (Int, Int) does not take parameters
  var y = casee(1);
               ^